--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .game-status {
-  font-size: 7vw;
+  font-size: 6vw;
   text-align: center;
 }
 
@@ -17,7 +17,7 @@
 
 .player {
   padding: 3vh;
-  font-size: 7vw;
+  font-size: 3.5vw;
 }
 
 .player-name {
@@ -40,7 +40,13 @@
   padding: 0.4vw;
 }
 
-.highscore {
-  font-size: 7vw;
+.highscore-header {
+  font-size: 6vw;
   text-align: center;
+}
+
+.highscore {
+  font-size: 4.5vw;
+  text-align: left;
+  margin-left: 14vw;
 }
