--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,4 @@
-.game-status {
+.header {
   font-size: 6vw;
   text-align: center;
-}
-
-.game-active {
-  background-color: #009900;
-}
-
-.game-waiting {
-  background-color: red;
-}
-
-.player-registered {
-  background-color: #009900;
-}
-
-.player {
-  padding: 3vh;
-  font-size: 3.5vw;
-}
-
-.player-name {
-  font-size: 10vw;
-  line-height: 10vw;
-}
-
-.player-avatar {
-  width: 10vw;
-  margin: 0;
-  margin-bottom: -1.5vw;
-  margin-left: 3vw;
-}
-
-.last-games {
-  font-size: 2vw;
-}
-
-.last-games .game {
-  padding: 0.4vw;
-}
-
-.highscore-header {
-  font-size: 6vw;
-  text-align: center;
-}
-
-.highscore {
-  font-size: 4.5vw;
-  text-align: left;
-  margin-left: 14vw;
 }
