--- a/src/components/Widget/WidgetHeader.css
+++ b/src/components/Widget/WidgetHeader.css
@@ -1,8 +1,16 @@
 .widget-header {
+  padding: 0.4vw;
   text-align: center;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgb(0, 188, 212);
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+  border-radius: 0px
 }
 
 .widget-header-title {
   font-size: 2vw;
-  text-align: center;
 }
