Replace ELO rating with TrueSkill rating

--- a/src/containers/SessionHistoryList.css
+++ b/src/containers/SessionHistoryList.css
@@ -7,3 +7,10 @@
     font-size: 1vw;
     font-style: italic;
 }
+
+.session-history-quality {
+    margin-top: 0.1vw;
+    color: #BBB;
+    font-size: 1vw;
+    font-style: italic;
+}
